src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-ofT-dwP0.25-dhF500-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: F500\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 320 × 500, bounds: 1280 × 720, states: []
size: 320 × 500, bounds: 1280 × 720, states: [Activated]
